--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -5,11 +5,11 @@ on:
     branches:
       - main
     paths:
-      - 'docs/**'
-      - 'mkdocs.yml'
-      - '.github/workflows/docs.yaml'
-      - 'internal/cmd/**'
-      - 'cmd/**'
+      - "docs/**"
+      - "mkdocs.yml"
+      - ".github/workflows/docs.yaml"
+      - "internal/cmd/**"
+      - "cmd/**"
   # Deploy versioned docs only after release workflow succeeds
   workflow_run:
     workflows: ["Release"]
@@ -18,19 +18,19 @@ on:
   workflow_dispatch:
     inputs:
       action:
-        description: 'Action to perform'
+        description: "Action to perform"
         required: true
-        default: 'deploy'
+        default: "deploy"
         type: choice
         options:
           - deploy
           - delete
       version:
-        description: 'Version to deploy or delete (e.g., 1.0.0, latest, dev)'
+        description: "Version to deploy or delete (e.g., 1.0.0, latest, dev)"
         required: true
-        default: 'dev'
+        default: "dev"
       set_default:
-        description: 'Set this version as default (deploy only)'
+        description: "Set this version as default (deploy only)"
         required: false
         default: false
         type: boolean
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     # Skip workflow_run events that didn't succeed or aren't for tags
     if: |
-      github.event_name != 'workflow_run' || 
+      github.event_name != 'workflow_run' ||
       (github.event.workflow_run.conclusion == 'success' && startsWith(github.event.workflow_run.head_branch, 'v'))
     steps:
       - name: Checkout
@@ -71,16 +71,19 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23'
+          go-version: "1.23"
           cache: true
 
       - name: Generate CLI documentation
         run: go run ./cmd/gendocs
 
+      - name: Generate schema documentation
+        run: go run ./cmd/genschema
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: "3.12"
 
       - name: Cache pip
         uses: actions/cache@v4
@@ -132,7 +135,7 @@ jobs:
           VERSION="${{ github.event.inputs.version }}"
           SET_DEFAULT="${{ github.event.inputs.set_default }}"
           echo "Deploying version: $VERSION"
-          
+
           if [ "$SET_DEFAULT" = "true" ]; then
             mike deploy --push --update-aliases $VERSION latest
             mike set-default --push latest
@@ -148,3 +151,10 @@ jobs:
           echo "Deleting version: $VERSION"
           mike delete --push $VERSION
           echo "Documentation version $VERSION deleted."
+
+      - name: Deploy schema documentation
+        run: |
+          VERSION="${{ github.event.inputs.version }}"
+          echo "Deploying schema: $VERSION"
+          mike deploy --push --update-aliases $VERSION latest
+          mike set-default --push latest
