chore: apply PR comment corrections
- create-pr skill: canonical temp files (pr-title.txt, pr-body.md), safer git add, title/body via files, step reorder
- docs workflow: restrict Deploy schema step to workflow_dispatch
- AGENTS.md: clarify channel niling (receiver sets to nil when ok==false)
- README: Docker pre-pull provider-aws-s3 to match config example
- genschema: lookupConfigComment dereference ptr and guard Struct
- compositions/reload: wrap reload errors with context
- down/provider remove: use errors.Is for ErrCancelled
- config: Phase comment (final default, post-eso deprecated), deterministic map iteration, crossplane version test
- kind/images: cmdReader.Close return both errors, push/load return (int,error), explicit cleanup, log rm failure
- ui: confirm error wrapping, KindLogger done-channel send guard, KindDashboardLogger nil updateFn guard, multistep doneCh

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -153,6 +153,7 @@ jobs:
           echo "Documentation version $VERSION deleted."
 
       - name: Deploy schema documentation
+        if: github.event_name == 'workflow_dispatch'
         run: |
           VERSION="${{ github.event.inputs.version }}"
           echo "Deploying schema: $VERSION"
