reload: use cmd context and wrap cancellation error; kindlogger: closed flag; asdf golangci-lint 2.4.0
- compositions reload: derive timeout from cmd.Context(), wrap ctx.Err() on cancel
- KindLogger: track closed under mutex, re-check before unconditional send
- .tool-versions: pin golangci-lint 2.4.0 for asdf

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -414,3 +414,22 @@ tasks:
     desc: Remove generated VHS recordings
     cmds:
       - rm -rf docs/assets/vhs/*.gif
+
+  dev:run-smoke-up:
+    desc: "Run smoke test for up command"
+    deps: [build]
+    dir: bin
+    cmds:
+      - ./{{.BINARY_NAME}} down --force
+      - ./{{.BINARY_NAME}} up
+      - ./{{.BINARY_NAME}} status
+      - ./{{.BINARY_NAME}} down --force
+  dev:pre-commit:
+    desc: "Run pre-commit checks"
+    deps: [lint, test]
+    cmds:
+      - task: lint
+      - task: test
+      - task: docs:generate
+      - task: schema:generate
+      - task: vhs:all
