fix: include schema generation in pre-commit check task
The check task (run by pre-commit hook) now includes schema:generate
to ensure the JSON schema is always up-to-date before committing.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -155,11 +155,12 @@ tasks:
   # =============================================================================
 
   check:
-    desc: Run all checks (fmt, lint, test)
+    desc: Run all checks (fmt, lint, test, schema)
     cmds:
       - task: fmt
       - task: lint
       - task: test
+      - task: schema:generate
 
   # =============================================================================
   # Release tasks
